# Programming-for-Modern-Machine-Learning

./: .gitattributes  .gitignore  Model-Training-Check.py  README.md  pyproject.toml  requirements.txt  test.py  training.py
dataset/CCPD2019/test/: file_names.txt  labels.csv
dataset/CCPD2019/train/: file_names.txt  labels.csv
dataset/CCPD2019/val/: file_names.txt  labels.csv
dataset/CCPD2020/ccpd_green/test/: file_names.txt  labels.csv  license_plates.txt
dataset/CCPD2020/ccpd_green/train/: file_names.txt  labels.cache  labels.csv  license_plates.txt
dataset/CCPD2020/ccpd_green/val/: file_names.txt  labels.cache  labels.csv  license_plates.txt
license-plates-dataset/for_notebook/: mk_example.csv
notebooks/: 01_data_exploration.ipynb  02_image_preprocessing copy.ipynb  02_image_preprocessing.ipynb  03_cnn_approach.ipynb  03_hog-svm_approach.ipynb  Untitled.ipynb  hog-svm_approach.ipynb  svm_model.joblib
programming_for_modern_machine_learning/: LicensePlateRecognition.ipynb  Untitled.ipynb
programming_for_modern_machine_learning/.ipynb_checkpoints/: LicensePlateRecognition-checkpoint.ipynb
src/: b2_60w.py  b2_60w_div.py  b2_60w_div2.py  b9_score_method_419_288_work.py  ctest.py
src/yolov5/: .gitignore  train.py
src/yolov5/data/: ccpd_green.yaml
src/yolov5/data/hyps/: hyp.finetune.yaml
src/yolov5/runs/train/ccpd_final25/: events.out.tfevents.1738094379.Azura.4572.0  hyp.yaml  opt.yaml  results.csv
src/yolov5/utils/: general.py
(+4849 files in other folders)
